# binary-image-processing-with-OpenCV

./: README.md
Lab2+/: CMakeLists.txt  Lab2+.cpp  Lab2+.h  Lab2+.vcxproj  Lab2+.vcxproj.filters  cmake_install.cmake  задание.txt
Lab2+/Lab2+.dir/Debug/: Lab2+.exe.recipe  Lab2+.ilk  vc143.idb
Lab2+/Lab2+.dir/Debug/Lab2+.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lab2+.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
